classDiagram
    namespace Math {
        class Permutation {
            - map: [usize; LEN]
            + inverse()
            + index() usize
            + from_indices(indices: [usize; LEN])
        }
        class ModVec {
            - values: [usize; LEN]
            + inverse()
        }
    }
    
    namespace Cubies {
        class Corners {
            - prm: Permutation<8>
            - ori: ModVec<8, 3>
            + twist(Twist)
            + inverse()
            + conjugated_by(Axis)
            + from_indices(prm, ori)
            + prm_index()
            + ori_index()
        }
        class Edges {
            - prm: Permutation<12>
            - ori: ModVec<12, 2>
            + twist(Twist)
            + inverse()
            + conjugated_by(Axis)
            + from_indices(x: LocPrm, y: LocPrm, z: LocPrm, ori)
            + from_subset_indices(xy_prm, z_prm)
            + loc_prm(Axis)
            + xy_prm_index()
            + ori_index()
        }
    }
    Corners ..> Permutation
    Corners ..> ModVec
    Edges ..> Permutation
    Edges ..> ModVec

    namespace LookupTables {
        class Twister {
            + twisted_c_ori(c_ori, Twist) usize
            + twisted_c_prm(c_prm, Twist) usize
            + twisted_e_ori(e_ori, Twist) usize
            + twisted_e_loc_prm(e_loc_prm, Twist) LocPrm
        }
        class SubsetIndex {
            + e_xy_prm(x_loc_prm: LocPrm, y_loc_prm: LocPrm) usize
        }
        class SubsetTwister {
            + twisted_xy_prm(xy_prm, Twist) usize
            + twisted_z_prm(z_prm, Twist) usize
        }
    }
    Twister ..> Corners
    Twister ..> Edges
    SubsetTwister ..> Edges
    SubsetIndex ..> Edges

    namespace Index {
        class Cube {
            - c_ori
            - c_prm
            - e_ori
            - x_loc_prm
            - y_loc_prm
            - z_loc_prm
            + corner_index()
            + from_corner_index(index)
            + subset_cube() SubsetCube
            + coset_index()
            + from_coset_index(index)
            + inverse()
            + conjugated_by(Axis)
        }
        class SubsetCube {
            - c_prm
            - xy_prm
            - z_prm
            + index()
            + from_index(index)
        }
    }
    Cube ..> Twister
    Cube ..> SubsetIndex
    SubsetCube ..> SubsetTwister

    class DistanceTable {
        + distance(idx)
    }
    DistanceTable ..> Cube
    DistanceTable ..> SubsetCube

    class DirectionTable {
        + distance(idx)
        + less_distance(idx) TwistSet
        + more_distance(idx) TwistSet
    }
    DirectionTable ..> DistanceTable

    class TwoPhaseSolver {
        + solve(Cube) Twists
    }
    TwoPhaseSolver ..> DistanceTable
    TwoPhaseSolver ..> DirectionTable
